--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="DrePong">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-abc
+<body ng-controller="landingController">
+  <canvas pong-board height="600" width="400"></canvas>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
